src/objects/caesars_marketing_campaigns_weekly_temp__x.object
<CustomObject>
    <fields>
        <fullName>f_slot_pct_ap_pdb_12mn_plus__c</fullName>
        <description>f_slot_pct_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_slot_pct_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_slot_pct_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_pct_ap_pdb_24mn_plus__c</fullName>
        <description>f_slot_pct_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_slot_pct_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_slot_pct_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_12mn_ap_ah__c</fullName>
        <description>f_theo_all_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_1mn_ap_ah__c</fullName>
        <description>f_theo_all_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_3mn_ap_ah__c</fullName>
        <description>f_theo_all_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ap_pdb_12mn_plus__c</fullName>
        <description>f_theo_all_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_theo_all_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_theo_all_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ap_pdb_24mn_plus__c</fullName>
        <description>f_theo_all_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_theo_all_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_theo_all_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ytd_ap_ah__c</fullName>
        <description>f_theo_all_ytd_ap_ah</description>
        <externalDeveloperName>f_theo_all_ytd_ap_ah</externalDeveloperName>
        <label>f_theo_all_ytd_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_12mn_ap_ah__c</fullName>
        <description>f_theo_slot_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_1mn_ap_ah__c</fullName>
        <description>f_theo_slot_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_3mn_ap_ah__c</fullName>
        <description>f_theo_slot_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_12mn_ap_ah__c</fullName>
        <description>f_theo_table_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_1mn_ap_ah__c</fullName>
        <description>f_theo_table_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_3mn_ap_ah__c</fullName>
        <description>f_theo_table_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tier_score_ah__c</fullName>
        <description>f_tier_score_ah</description>
        <externalDeveloperName>f_tier_score_ah</externalDeveloperName>
        <label>f_tier_score_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_12mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_12mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_12mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_24mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_24mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_24mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_24mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_36mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_36mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_36mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_36mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_12mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_12mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_12mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_24mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_24mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_24mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_24mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_36mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_36mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_36mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_36mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_12mn_ap_ah__c</fullName>
        <description>f_worth_12mn_ap_ah</description>
        <externalDeveloperName>f_worth_12mn_ap_ah</externalDeveloperName>
        <label>f_worth_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_1mn_ap_ah__c</fullName>
        <description>f_worth_1mn_ap_ah</description>
        <externalDeveloperName>f_worth_1mn_ap_ah</externalDeveloperName>
        <label>f_worth_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_3mn_ap_ah__c</fullName>
        <description>f_worth_3mn_ap_ah</description>
        <externalDeveloperName>f_worth_3mn_ap_ah</externalDeveloperName>
        <label>f_worth_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth__c</fullName>
        <description>f_worth</description>
        <externalDeveloperName>f_worth</externalDeveloperName>
        <label>f_worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_all_ytd_ap_ah__c</fullName>
        <description>f_worth_all_ytd_ap_ah</description>
        <externalDeveloperName>f_worth_all_ytd_ap_ah</externalDeveloperName>
        <label>f_worth_all_ytd_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_age__c</fullName>
        <description>i_age</description>
        <externalDeveloperName>i_age</externalDeveloperName>
        <label>i_age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_age_adj_ah__c</fullName>
        <description>i_age_adj_ah</description>
        <externalDeveloperName>i_age_adj_ah</externalDeveloperName>
        <label>i_age_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_12mn_ap_ah__c</fullName>
        <description>i_days_rtd_12mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_12mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_1mn_ap_ah__c</fullName>
        <description>i_days_rtd_1mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_1mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_3mn_ap_ah__c</fullName>
        <description>i_days_rtd_3mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_3mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_days_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_days_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_days_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_ap_pdb_24mn_plus__c</fullName>
        <description>i_days_rtd_ap_pdb_24mn_plus</description>
        <externalDeveloperName>i_days_rtd_ap_pdb_24mn_plus</externalDeveloperName>
        <label>i_days_rtd_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_dob_mn_adj_ah__c</fullName>
        <description>i_dob_mn_adj_ah</description>
        <externalDeveloperName>i_dob_mn_adj_ah</externalDeveloperName>
        <label>i_dob_mn_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dob_yr_adj_ah__c</fullName>
        <description>i_dob_yr_adj_ah</description>
        <externalDeveloperName>i_dob_yr_adj_ah</externalDeveloperName>
        <label>i_dob_yr_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lodging_pct__c</fullName>
        <description>i_lodging_pct</description>
        <externalDeveloperName>i_lodging_pct</externalDeveloperName>
        <label>i_lodging_pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_day_mkt_ah__c</fullName>
        <description>i_lop_first_day_mkt_ah</description>
        <externalDeveloperName>i_lop_first_day_mkt_ah</externalDeveloperName>
        <label>i_lop_first_day_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_hr_mkt_ah__c</fullName>
        <description>i_lop_first_hr_mkt_ah</description>
        <externalDeveloperName>i_lop_first_hr_mkt_ah</externalDeveloperName>
        <label>i_lop_first_hr_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_trp_mkt_ah__c</fullName>
        <description>i_lop_first_trp_mkt_ah</description>
        <externalDeveloperName>i_lop_first_trp_mkt_ah</externalDeveloperName>
        <label>i_lop_first_trp_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_12mn_ap_ah__c</fullName>
        <description>i_lop_game_12mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_12mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_1mn_ap_ah__c</fullName>
        <description>i_lop_game_1mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_1mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_3mn_ap_ah__c</fullName>
        <description>i_lop_game_3mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_3mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_profitable_pct__c</fullName>
        <description>i_profitable_pct</description>
        <externalDeveloperName>i_profitable_pct</externalDeveloperName>
        <label>i_profitable_pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_pct_worth_1__c</fullName>
        <description>i_prop_pct_worth_1</description>
        <externalDeveloperName>i_prop_pct_worth_1</externalDeveloperName>
        <label>i_prop_pct_worth_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_pct_worth_2__c</fullName>
        <description>i_prop_pct_worth_2</description>
        <externalDeveloperName>i_prop_pct_worth_2</externalDeveloperName>
        <label>i_prop_pct_worth_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_1__c</fullName>
        <description>i_random_1</description>
        <externalDeveloperName>i_random_1</externalDeveloperName>
        <label>i_random_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_2__c</fullName>
        <description>i_random_2</description>
        <externalDeveloperName>i_random_2</externalDeveloperName>
        <label>i_random_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_static_yr__c</fullName>
        <description>i_random_static_yr</description>
        <externalDeveloperName>i_random_static_yr</externalDeveloperName>
        <label>i_random_static_yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_12mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_12mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_12mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_1mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_1mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_1mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_3mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_3mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_3mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_12mn_ap_ah__c</fullName>
        <description>i_trp_rtd_12mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_12mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_1mn_ap_ah__c</fullName>
        <description>i_trp_rtd_1mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_1mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_3mn_ap_ah__c</fullName>
        <description>i_trp_rtd_3mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_3mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_trp_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_trp_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_trp_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_ap_pdb_24mn_plus__c</fullName>
        <description>i_trp_rtd_ap_pdb_24mn_plus</description>
        <externalDeveloperName>i_trp_rtd_ap_pdb_24mn_plus</externalDeveloperName>
        <label>i_trp_rtd_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$marketing_campaigns_weekly_temp</label>
    <pluralLabel>caesars$marketing_campaigns_weekly_temp</pluralLabel>
</CustomObject>